--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram </title>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
 
 </head>
@@ -107,7 +107,7 @@
         </div>
         <div class="stories">
            <!-- stories 1 -->
-        <div class="stories-img .color">
+        <div class="stories-img .color" >
             <img src="Replica 01.png" alt="profile">
         </div>
            <!-- stories 2 -->
@@ -173,12 +173,12 @@
          </div>
 
           <!-- box 2 -->
-          <div class="post-box2">
+          <div class="post-box2" >
             <img src="post-pack/Post 2.svg" alt="post">
             
             <a href="#" >
                 <span class="icon">
-                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-amxWkLVSFrz7v44fQauBqK00JssQx8lKVw&s" alt="" id="alpha"> 
+                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-amxWkLVSFrz7v44fQauBqK00JssQx8lKVw&s" alt="" id="one"> 
                 </span>
             </a>
 
@@ -196,7 +196,7 @@
 
             <a href="#" >
                 <span class="icon">
-                   <img src="https://static.thenounproject.com/png/5627760-200.png" alt="" id="gamma"> 
+                   <img src="https://static.thenounproject.com/png/5627760-200.png" alt="" id="two"> 
                 </span>
             </a>
          </div>
@@ -238,7 +238,7 @@
          </div>
 
           <!-- box5 -->
-          <div class="post-box5">
+          <div class="post-box5" >
             <img src="post-pack/Post 5.svg" alt="post">
             
             <a href="#" >
